Detect content overflow and fix themes which had content outside the safe zone.

--- a/app/styles/_themes.scss
+++ b/app/styles/_themes.scss
@@ -258,7 +258,6 @@ $black: #333;
 
 /* black-border
 */
-.black-border,
 .black-border-thumb .theme-preview {
   position: relative;
   background-color: #fff;
@@ -281,15 +280,21 @@ $black: #333;
 .black-border {
   @include theme(light);
 
+  background-color: #000;
+
+  .card-content {
+    background-color: #fff;
+  }
+
   text-align: center;
 
   .card-picture {
     position: relative;
     z-index: 2;
-    top: emCalc(44);
+    top: 10%;
     left: auto;
     margin: 0 auto;
-    min-height: emCalc(100);
+    min-height: emCalc(80);
   }
 
   &.card-big .no-picture {
@@ -298,14 +303,11 @@ $black: #333;
   }
 
   .vcard {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    border: emCalc(12) solid #000;
-    z-index: 1;
-    padding: emCalc(160) emCalc(8) 0;
+    position: relative;
+    top: 8%;
+    left: auto;
+    display: block;
+    padding: 4%;
 
     text-align: center;
     color: #000;
@@ -362,8 +364,8 @@ $black: #333;
     linear-gradient(
       left,
       #34495E 0%,
-      #34495E 60%,
-      #3498DB 60%,
+      #34495E 56%,
+      #3498DB 56%,
       #3498DB 100%
     )
   );
@@ -373,8 +375,8 @@ $black: #333;
   @include custom-gradient(
     left,
     #34495E 0%,
-    #34495E 60%,
-    #3498DB 60%,
+    #34495E 56%,
+    #3498DB 56%,
     #3498DB 100%
   );
 }
@@ -403,7 +405,7 @@ $black: #333;
     .person {
       left: emCalc(20);
       top: emCalc(40);
-      width: emCalc(220);
+      width: emCalc(200);
 
       color: #fff;
 
@@ -421,7 +423,7 @@ $black: #333;
     .email,
     .url {
       top: emCalc(48);
-      left: emCalc(320);
+      left: emCalc(292);
       width: emCalc(170);
 
       color: darken(#3498DB, 37%);
