--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -116,6 +116,7 @@ $card-border: 1px solid darken($white, 10%);
 
 // padding 0.25 in for bleed and safe zone (.125 + .125)
 .card-preview {
+  overflow: hidden;
   position: relative;
   width: 100%;
   height: 100%;
@@ -126,7 +127,6 @@ $card-border: 1px solid darken($white, 10%);
   padding: emCalc(24 + 6);
 
   @include transition(background 0.1s ease-in);
-  @include clearfix;
 
   font-size: .75em;
 
@@ -177,11 +177,16 @@ $card-border: 1px solid darken($white, 10%);
   z-index: -1;
 }
 
+input[type=file] {
+  width: 1px;
+  height:1px;
+}
+
 $color-handle: desaturate($color1, 60%);
 
 .card-picture {
   position: absolute;
-  top: 8%;
+  top: 6%;
   left: 4%;
 
   width: 36%;
@@ -242,7 +247,7 @@ $color-handle: desaturate($color1, 60%);
 */
 .vcard {
   position: absolute;
-  top: 8%;
+  top: 6%;
   left: 52%;
   border: 0;
   padding: 0;
