--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -450,7 +450,7 @@ footer {
 
     span {
       display: block;
-      padding-left: emCalc(20);
+      padding-left: emCalc(28);
     }
   }
 
